crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__copilot__permission-recorded.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- SessionStart:
    agent_id: 5472028673071249298
    source: copilot
    session_id: 82c360e3-efb1-4f04-ba4a-1e583feaaba0
    cwd: /private/tmp/pixtuoid-capture/proj
    parent_id: ~
- ActivityStart:
    agent_id: 5472028673071249298
    tool_use_id: toolu_016imcdqh2f4TFfEMGKnot31
    detail:
      Generic:
        display: "bash: rm NOTE.txt"
- Waiting:
    agent_id: 5472028673071249298
    reason: "permission: shell"
- ActivityEnd:
    agent_id: 5472028673071249298
    tool_use_id: toolu_016imcdqh2f4TFfEMGKnot31
- ModelInfo:
    agent_id: 5472028673071249298
    model: claude-haiku-4.5
    effort: ~
- SessionEnd:
    agent_id: 5472028673071249298
    as_child: false
- Usage:
    agent_id: 5472028673071249298
    fresh_tokens: 17488
