crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__copilot__tool-run-recorded.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- SessionStart:
    agent_id: 3070848713234146426
    source: copilot
    session_id: acb29174-9cf8-4701-81e0-e966230d3276
    cwd: /private/tmp/pixtuoid-capture/proj
    parent_id: ~
- ActivityStart:
    agent_id: 3070848713234146426
    tool_use_id: toolu_0161AKsh75Xe5tHkX1TUaePw
    detail:
      Generic:
        display: "view: /private/tmp/pixtuoid-capture/proj/NOTE.…"
- ActivityStart:
    agent_id: 3070848713234146426
    tool_use_id: toolu_01NT5khn1628MZzNgLQnSRkQ
    detail:
      Generic:
        display: "view: /private/tmp/pixtuoid-capture/proj"
- ActivityStart:
    agent_id: 3070848713234146426
    tool_use_id: toolu_01NfK1Jk1Z7ntaZjaVp8UmxL
    detail:
      Generic:
        display: "view: /private/tmp/pixtuoid-capture/proj/NOTE.…"
- ActivityEnd:
    agent_id: 3070848713234146426
    tool_use_id: toolu_01NT5khn1628MZzNgLQnSRkQ
- ModelInfo:
    agent_id: 3070848713234146426
    model: claude-haiku-4.5
    effort: ~
- ActivityEnd:
    agent_id: 3070848713234146426
    tool_use_id: toolu_01NfK1Jk1Z7ntaZjaVp8UmxL
- ModelInfo:
    agent_id: 3070848713234146426
    model: claude-haiku-4.5
    effort: ~
- ActivityEnd:
    agent_id: 3070848713234146426
    tool_use_id: toolu_0161AKsh75Xe5tHkX1TUaePw
- ModelInfo:
    agent_id: 3070848713234146426
    model: claude-haiku-4.5
    effort: ~
- SessionEnd:
    agent_id: 3070848713234146426
    as_child: false
- Usage:
    agent_id: 3070848713234146426
    fresh_tokens: 21057
